deploy/services/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - name: websecure
      port: 8443
      protocol: TCP
